* Do not require a web application * Handle multiple request handlers * Remove all UI and templates and handlers * Use actuator endpoint for information